# cs350-examples

./: .gitignore  README.md  check-style-java.sh
00-Project-Set-Up-Gradle-8.14.2/: README.md
Cargo-Make/Example-1/: Makefile.toml
Clean-Coding-And-TDD/: README.md
Custom-Tasks-Cargo-Make/Example-1/: .gitignore  Cargo.toml
Custom-Tasks-Gradle-8.14.2/Example-1/: build.gradle
Custom-Tasks-Python-uv-taskipy/Example-1/: main.py  pyproject.toml
Custom-Tasks-Python-uv-taskipy/Example-1/resources/: anchors.html
Custom-Tasks-Python-uv-taskipy/Example-1/tests/: test_simple_html_parser.py
Eclipse/: README.md
Git/: .gitignore  gradle-app.setting
Gradle/: README.md
Gradle-1/: README.md
Gradle-1/Example-3/: build.gradle
Gradle-1/Example-4/: build.gradle
Gradle-1/Example-5/: build.gradle
Gradle-1/Example-6/: build.gradle
Gradle-2/: README.md
Gradle-2-Reports/: README.md
Gradle-2-Reports/Example-1/: build.gradle
Gradle-2-Reports/Example-2/: build.gradle
Gradle-3-GitHub-Pages/: README.md
Gradle-4-Integration-Tests/: README.md
Gradle/Example-1/: build.gradle
Gradle/Example-2/: build.gradle
Gradle/Example-3/: build.gradle
Gradle/Example-4/: build.gradle  makefile
Gradle2-CI-Gradle-Update/: .gitignore  .gitlab-ci.yml  build.gradle
Gradle2-CI/Example-2/: .gitlab-ci.yml
Gradle2-CI/Example-3/: .gitlab-ci.yml
Gradle2-CI/Example-4/: .gitlab-ci.yml
Gradle2-CI/Example-5/: .gitlab-ci.yml  build.gradle
Gradle2-CI/Example-8/: build.gradle
Gradle2-CI/Example-9/: build.gradle
Gradle2/Example-1/: build.gradle
Gradle2/Example-2/: build.gradle
Gradle2/Example-3/: build.gradle
JUnit/: .gitignore  README.md  notes.txt
JUnit-1/: .gitignore  README.md
JUnit-1/Example-1/: build.gradle
JUnit-1/Example-2/: build.gradle
JUnit-2/: README.md
JUnit-3/: README.md
JUnit2/: .gitignore  deploy.sh
Java/: README.md
Java-1/: README.md
Java-2/: README.md
Java2/: deploy.sh
Office-Hours/: README.md
Office-Hours/Excel-Rust/: Cargo.toml  report.xlsx  report_students.xlsx
Office-Hours/Excel-Rust/src/: error.rs  lib.rs  main.rs  roster.rs  simple_excel_writer.rs  student.rs
Office-Hours/Excel-Rust/tests/: test_simple_excel_report.rs
Office-Hours/JSON-Rust/: Cargo.toml
Office-Hours/JSON-Rust/src/: main.rs  roster.rs  student.rs
Office-Hours/JSON-Rust/tests/: test_roster.rs
OfficeHours/: README.md
OfficeHours-CompileSimpleJava/: build.gradle
OfficeHours-Gradle-File-Task/: build.gradle  build_BACKUP_20377.gradle
OfficeHours-IniExample/: build.gradle
OfficeHours-JSON-IO/: build.gradle
OfficeHours-JUnitCore/: build.gradle
OfficeHours-Python-NER-Extracter/: ner_block_processing.py
OfficeHours-RelativePath/: build.gradle
OfficeHours-WekaBasics/: build.gradle
OfficeHours-WordList/: build.gradle
Testing-Input-Loop-Python/Example-1/: main.py  pyproject.toml
Unit-Testing-Python-and-Rust/: README.md
(+230 files in other folders)
